agregue un nav a index y le puse estilos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>prueba git</title>
 </head>
 <body>
-    <h2>titulo de prueba</h2>
+    <section class="nav">
+        <div class="titulo">
+            <h2>Hola esto es prueba</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum enim ratione quaerat unde mollitia eum labore, sapiente, eveniet suscipit magni error ad nesciunt. Corrupti veniam, beatae dolorum accusantium a deleniti.</p>
+        </div>
+    </section>
 </body>
 </html>
