estrutura de la cabecera[

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <section class="nav">
         <div class="titulo">
+            <div class="cabecera"><h1>cabecera</h1></div>
             <h2>Hola esto es prueba</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum enim ratione quaerat unde mollitia eum labore, sapiente, eveniet suscipit magni error ad nesciunt. Corrupti veniam, beatae dolorum accusantium a deleniti.</p>
         </div>
