--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <section class="nav">
         <div class="titulo">
             <h2>Hola esto es prueba</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum enim ratione quaerat unde mollitia eum labore, sapiente, eveniet suscipit magni error ad nesciunt. Corrupti veniam, beatae dolorum accusantium a deleniti.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Rerum enim ratione quaerat unde mollitia eum labore, sapiente, eveniet suscipit magni error ad nesciunt. Corrupti veniam, beatae dolorum accusantium a deleniti.</p>
+            <p> esto es de mi master por eso no aparece</p>
+            <a href="">hola mundo</a>
         </div>
     </section>
 </body>
