--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="nav">
         <div class="titulo">
-            <div class="cabecera"><h1>Cabecera</h1></div>
+            <div class="cabecera"><h1> Mi Cabecera</h1></div>
             <h2>Hola esto es prueba</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Rerum enim ratione quaerat unde mollitia eum labore, sapiente, eveniet suscipit magni error ad nesciunt. Corrupti veniam, beatae dolorum accusantium a deleniti.</p>
             <p> esto es de mi master por eso no aparece</p>
