cambie el titulo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="nav">
         <div class="titulo">
             <div class="cabecera"><h1> Mi Cabecera 3.0</h1></div>
-            <h2>Hola esto es prueba</h2>
+            <h2>Hola esto ya no es una prueba</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Rerum enim ratione quaerat unde mollitia eum labore, sapiente, eveniet suscipit magni error ad nesciunt. Corrupti veniam, beatae dolorum accusantium a deleniti.</p>
             <p> esto es de mi master por eso no aparece</p>
             <a href="">hola mundo</a>
